--- a/index.html
+++ b/index.html
@@ -20,6 +20,28 @@
       </thead>
       <tbody></tbody>
     </table>
-    <script src="script.js"></script>
+     <ul id="log"></ul>
+    
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+  const socket = io(); // This triggers the 'connection' event on the server
+  socket.on("connect",()=>{
+    console.log("connected to the server")
+  })
+ 
+    socket.on('filesync',({event,fileName,content})=>{
+    if(event==='add' || event ==='change'){
+      const blob=new Blob([Uint8Array.from(atob(content), c => c.charCodeAt(0))])
+      const a= document.createElement('a')
+      a.href=URL.createObjectURL(blob)
+      a.download=fileName
+      a.click()
+      }
+      else if(event==='unlink'){
+        console.log(`${fileName} is deleted`)
+      }
+    })
+</script>
+<script src="script.js"></script>
 </body>
 </html>
