Established P-to-P connection via WebRTC and Socketio for signaling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      <ul id="log"></ul>
     
     <script src="/socket.io/socket.io.js"></script>
-    <script>
+    <!-- <script>
   const socket = io(); // This triggers the 'connection' event on the server
   socket.on("connect",()=>{
     console.log("connected to the server")
@@ -41,7 +41,7 @@
         console.log(`${fileName} is deleted`)
       }
     })
-</script>
+</script> -->
 <script src="script.js"></script>
 </body>
 </html>
